# django-forum

./: .coveragerc  .gitignore  README.md  README.rst  imports.py  manage.py  package.json  pyproject.toml
.github/workflows/: workflow.yml
django_forum/: settings.py  urls.py  wsgi.py
forumapp/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
forumapp/migrations/: 0001_initial.py  0002_auto_20200529_1758.py  0003_auto_20200529_1824.py
forumapp/templates/admin/: base_site.html
forumapp/templates/forumapp/: base.html  channel.html  channel_listing.html  channel_settings.html  comment.html  comment_listing.html  favorites.html  messages.html  thread.html  thread_listing.html  user.html  user_listing.html  user_settings.html
forumapp/templatetags/: channel_helpers.py  comment_helpers.py  commenthelpers.py  common_helpers.py  thread_helpers.py  user_helpers.py
foundation/: urls.py
foundation/templates/foundation/: index.html
registration/: forms.py  tests.py  urls.py  views.py
registration/templates/registration/: login.html  logout.html  messages.html  password_reset.html  password_reset_success.html  signup.html
templates/: base.html  index.html
