[tool.poetry]
name = "fafSite"
version = "0.1.0"
description = ""
authors = ["FarmAfield Team <team@farmafield.com>"]

[tool.poetry.dependencies]
python = "3.6.*"
django-admin-interface = "0.5.0"
django-nested-inline = "0.3.7"
django-extensions = "1.7.9"
django-unused-media = "0.1.8"
django-mathfilters = "0.4.0"
django-storages = "1.6.6"
django-localflavor = "1.5.1"
raven = "6.2.1"
django-mptt = "0.8.7"
django-private-storage = "1.2.2"
django-robots = "3.0"
boto3 = "1.4.8"
django-appconf = "1.0.2"
django-ckeditor = "5.2.2"
future = "*"
gunicorn = "19.7.1"
jsonfield = "2.0.2"
mock = "2.0.0"
numpy = "1.16.4"
oauthlib = "2.0.2"
plaid-python = "2.0.2"
psycopg2 = "=2.7.3.2"
py = "1.4.34"
python3-openid = "3.1.0"
redis = "2.10.5"
regex = "2017.11.9"
reportlab = "3.4.0"
requests-oauthlib = "0.8.0"
scipy = "1.3"
sendgrid = "3.6.5"
sendgrid-django = "4.1.0"
six = "1.10.0"
stripe = "1.61.0"
django-hijack = "2.1.7"
django-hijack-admin = "2.1.7"
django-admin-tools = "0.8.1"
holidays = "0.9.5"
django-model-utils = "3.0.0"
Quandl = "^3.4"
MonthDelta = "0.9.1"
PyNaCl = "1.2.1"
django-parsley = "0.7"
django-request-token = "0.8"
unittest-xml-reporting = "2.2.0"
django-test-exclude = "0.1.0"
django-nose = "1.4.5"
nose-exclude = "*"
django-polymorphic = "*"
django-waffle = "*"
django-chartjs = "*"
django = "1.11.25"
xlsxwriter = "*"
pipfile = "*"
model-mommy = "*"
unidecode = "*"
django-simple-history = "*"
django-inline-actions = "1.3.0"
django-fieldsignals = "*"
factory-boy = "*"
django-sesame = "*"
django-notifications-hq = "*"
feedparser = "*"
django-environ = "*"
django-admin-sortable = "*"
geoip2 = "*"
django-advanced-filters = "*"
django-allauth = "0.36.0"
django-image-cropping = "*"
easy-thumbnails = "*"
django-simple-blog = "0.2.1"
django-debug-toolbar = "*"
django-markdownx = "*"
django-countries = "*"
django-tracking2 = "*"
django-organizations = "*"
django-ok-seo = "*"
django-solo = "*"
pyach = {git = "https://github.com/morganthrapp/pyACH.git"}
django-forms-builder = {git = "https://github.com/farmafield-labs/django-forms-builder.git"}
dj-database-url = "^0.5.0"
pygsheets = "^2.0"
django-webpack-loader = "^0.6.0"
urllib3 = "^1.24"
requests = "2.20"
pyaml = "^19.4"
ua-parser = "*"
user-agents = "^2.0"
django-user-agents = "^0.4.0"
django-background-tasks = "^1.2"
sentry-sdk = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
